Updated client shutdown to wait for commands